- Added ApplicationDbContext class, uses SQL Server - Added ICoursesRepository, IModulesRepostory - Did some refactoring for CourseService and its interface - Added navigation properties for Course and Module entities

--- a/CourseManagementSystem.Infrastructure/CourseManagementSystem.Infrastructure.csproj
+++ b/CourseManagementSystem.Infrastructure/CourseManagementSystem.Infrastructure.csproj
@@ -1,13 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -15,7 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CourseManagementSystem.Core\CourseManagementSystem.Core.csproj" />
-    <ProjectReference Include="..\CourseManagementSystem.Infrastructure\CourseManagementSystem.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
