- Added IJwtService and implemented logic for it in JwtService - Configured lofic for Authorization, Authentication in Program.cs, added configuration for Jwt - Added Jwt section oin appsettings.json

--- a/CourseManagementSystem.API/appsettings.json
+++ b/CourseManagementSystem.API/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CourseManagementSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+    "Jwt": {
+        "EXPIRATION_MINUTES": 30,
+        "Key": "thisIsAVerySecretKey1234*!!",
+        "Issuer": "http://localhost:5066",
+        "Audience": "http://localhost:5066"
     }
 }
