- Configured less strict password complexity - Added attributes to allow role-based access to CourseController resources

--- a/CourseManagementSystem.API/appsettings.json
+++ b/CourseManagementSystem.API/appsettings.json
@@ -11,7 +11,7 @@
     },
     "Jwt": {
         "EXPIRATION_MINUTES": 30,
-        "Key": "thisIsAVerySecretKey1234*!!",
+        "Key": "thisIsAVerySecretKey1234*!!LongerKey",
         "Issuer": "http://localhost:5066",
         "Audience": "http://localhost:5066"
     }
