- Enabled hybrid authentication (via Cookie and via JWT)
- Specified JwtBearerDefaults.AuthenticationScheme as scheme for all Authorize attributes

- Fixed issue with Exception handling middleware
- Created BaseEntity to avoid repetitiveness in Course and Module classes' fields

- Removed CreatedBy from Module and Course UpdateRequests (this filed shoudln't be modifyable)

- Did necessary changes to mappers

- Made a check for duplicate users by email

- Removed validator rules that could cause potential issues on entity creation

- Added missing statement AddFluentValidationAutoValidation to DI in Core

- Dropped existing migrations, created new ones

- Fixed a bug in CourseRepository when it removed a course on update if we didn't add any modules to it

- Added logic in ModulesRepository to add contribuitors to the course (the user who added the module)

- Seeded admin data from configuration instead of using magic strings

--- a/CourseManagementSystem.API/appsettings.json
+++ b/CourseManagementSystem.API/appsettings.json
@@ -14,5 +14,9 @@
         "Key": "thisIsAVerySecretKey1234*!!LongerKey",
         "Issuer": "http://localhost:5066",
         "Audience": "http://localhost:5066"
+    },
+    "AdminSettings": {
+        "AdminEmail": "administrator@example.com",
+        "AdminPassword": "AdminPassword123!"
     }
 }
